# merkle_patricia_tree

./: .gitignore  .tarpaulin.toml  Cargo.toml  Makefile  README.md  plot-profile.plt  profile.sh
.github/workflows/: mayhem.yml  rust.yml
benches/: bench.rs  common.rs
examples/: calculate-root-sorted.rs  calculate-root.rs  storage-mdbx.rs  storage-sled.rs  storage.rs
external-benches/geth/: bench_test.go  go.mod  go.sum
external-benches/paprika-bench/: .gitignore  Program.cs  README.md  paprika-bench.csproj
external-benches/paprika-bench/nuget-feed/: Paprika.1.0.0.nupkg  Paprika.1.0.0.symbols.nupkg  Paprika.Runner.1.0.0.nupkg  Paprika.Runner.1.0.0.symbols.nupkg  Tree.1.0.0.nupkg  Tree.1.0.0.symbols.nupkg  Tree.Crypto.1.0.0.nupkg  Tree.Crypto.1.0.0.symbols.nupkg  Tree.Runner.1.0.0.nupkg  Tree.Runner.1.0.0.symbols.nupkg
fuzz/: Cargo.toml  Dockerfile
fuzz/fuzz_targets/: hash.rs  insert.rs
fuzz/mayhemfiles/: Mayhemfile_insert
mayhem/: hash.mayhemfile
plots/: plot-bench.plt  plot-profile.plt
proptest-regressions/: lib.txt
src/: dump.rs  hashing.rs  iter.rs  lib.rs  nibble.rs  node.rs  nodes.rs  path.rs  storage.rs  util.rs
src/node/: branch.rs  extension.rs  leaf.rs
src/nodes/: branch.rs  extension.rs  leaf.rs
tests/: trietest.rs
